# comp-club-test-task

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/club/: client.h  club.h  config.h  event.h  logger.h  table.h
include/utils/: exceptions.h  time.h
src/: CMakeLists.txt  club.cpp  config.cpp  event.cpp  main.cpp
test/: CMakeLists.txt  club.cpp  config_parsing.cpp  event_parsing.cpp  time.cpp
